@@ -1198,6 +1198,10 @@ String.prototype.__setitem__ = function(idx, val) {
 String.prototype.upper = String.prototype.toUpperCase;
 String.prototype.lower = String.prototype.toLowerCase;
 
+String.prototype.zfill = function(width) {
+    return this.rjust(width, '0');
+};
+
 String.prototype.__add__ = function(y) {
     if (typeof y != "string") {
         throw pyjslib.TypeError("cannot concatenate 'str' and non-str objects");
