@@ -1,6 +1,8 @@
                     Changes made to Pyjamas since 0.6
                     ---------------------------------
 
+ * Added string zfill function, thanks to A. Motolla.
+
  * Added datetime module, thanks to A. Motolla.
 
  * Added issubclass, thanks to Daniel Gerber
